# SIGMA

./: .env.example  .gitignore  LICENSE  README.en.md  README.es.md  README.md  conftest.py  director_main.py  docker-compose.yml  env.example.txt  orchestrator.py  policies.yaml  pyproject.toml  requirements.txt  sigma_checkpoints.sqlite  webhook_receiver.py
core/: sigma__init__.py
db/: init_schema.sql
docs/: AGENTS_CREATOR.en.md  AGENTS_CREATOR.md  ESTRUCTURA_PROYECTO.en.md  ESTRUCTURA_PROYECTO.md  SIGMA_v1.7.en.md  SIGMA_v1.7.md  SIGMA_v2_4.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  TROUBLESHOOTING_HITO2.md  adr-README.md  fusion_0001_0002_v2.0.0.md  verificacion_artefactos_hito1.md
docs/Docs_hito1/: AGENTS_CREATOR.md  SIGMA_v1.7.en.md  TROUBLESHOOTING.en.md  adr-README-v1.5.en.md  adr-README-v1.5.md
docs/adr/: adr-001-memoria-epistemica.en.md  adr-001-memoria-epistemica.md  adr-002-mapreduce-skills.en.md  adr-002-mapreduce-skills.md  adr-003-equipo-3-colores.md  adr-004-vibe-diff-mfa.md  (+17 more)
hooks/: __init__.py  zulip_notifier.py
outputs/: dashboard_run1_failed.html  dashboard_run2_failed.html  dashboard_run3_ok.html  dashboard_run4_ok.html  dashboard_run5_imdb_ok.html  dashboard_run6_social_ok_warnings.html  output_report.en.md  output_report.md
scripts/: download_model.py  resume_hitl_manual.py
sigma_fallback_logs/: sigma_events_2026-07-12.jsonl  sigma_events_2026-07-17.jsonl
skills/: _common.py
tests/: langfuse_pytest.py  test_common_connections_stress.py  test_dashboard_fix.html  test_dashboard_fix.py  test_langfuse_connection.py
(+219 files in other folders)
