[project]
name = "sigma"
version = "0.1.0"
description = "SIGMA — Sistema Integrado para la Gestión Multiagente"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
]

langfuse = [
    "langfuse>=2.0,<3",  # Techo <3: Langfuse SDK v4 es incompatible con el server self-hosted V2 (ver ADR-011)
] 

# Nota: Este cambio se generó porque había contradicciones con el langfuse que se está usando. Antes: - "langfuse>=2.0"    


[tool.setuptools.packages.find]
include = ["sigma*"]

[tool.pytest.ini_options]
testpaths = ["sigma/skills", "tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib --ignore=tests/hist_diagnoses_tests_202607"